--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -13,6 +13,7 @@
         <module>eurekaclient</module>
         <module>gateway</module>
         <module>feign</module>
+        <module>config</module>
     </modules>
 
 
